--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,28 +1,16 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>Title</title>
-    
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/style.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
+  <%- include("header") -%>
     <div class="page-content page-container" id="page-content">
       <div class="padding">
-          <div class="row container d-flex justify-content-center">
+          <div class="row  d-flex justify-content-center">
               <div class="col-md-12">
                   <div class="card px-3">
                       <div class="card-body">
                           <h4 class="card-title">Awesome Todo list</h4>
+                          <h5 class="card-title"><%=toDay%></h5>
                           <form action="/" method="POST" class="add-items d-flex">
                             <input type="text"  name="newItem" class="form-control todo-list-input" placeholder="What do you need to do today?"> 
-                            <button type="submit" class="add btn btn-primary font-weight-bold todo-list-add-btn">Add</button> </form>
+                            <button type="submit" class="add btn btn-primary font-weight-bold todo-list-add-btn">Add</button> 
+                          </form>
                           <div class="list-wrapper">
                               <ul class="d-flex flex-column-reverse todo-list">     
                                  <% for (let i=0;i<newItems.length;i++){ %>
@@ -42,12 +30,4 @@
           </div>
       </div>
   </div>
-  
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/style.js"></script>
-  </body>
-</html>
+  <%- include("footer") -%>
